--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,29 @@
-// $primary: red;
+// Colors
+$primary: #42b983;
+$body-color: #2b354a;
+$info: #73abfe;
+$gray-100: #f6f6f6;
+$text-muted: #4e6e8e;
+$gray-900: #273849;
+$dark: #273849;
 
+// Require
 @import "./basic";
 
 $navbar-dark-color: rgba($white, 0.7);
+
+.bg {
+  background-color: $body-color;
+}
+
+.nav-bg {
+  background-color: #364257;
+}
+
+.avatar-circle {
+  border-radius: 50%;
+}
+
+.cursor {
+  cursor: pointer;
+}
